--- a/java/pom.xml
+++ b/java/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.feast</groupId>
-    <artifactId>linq</artifactId>
+    <artifactId>java-extension</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
