--- a/java/pom.xml
+++ b/java/pom.xml
@@ -14,14 +14,14 @@
         <maven.compiler.target>${jdk.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <manifold.version>2023.1.0</manifold.version>
+        <lombok.version>1.18.26</lombok.version>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>systems.manifold</groupId>
-            <artifactId>manifold-ext-rt</artifactId>
-            <version>${manifold.version}</version>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains</groupId>
@@ -41,21 +41,22 @@
                     <source>${jdk.version}</source>
                     <target>${jdk.version}</target>
                     <encoding>UTF-8</encoding>
-                    <compilerArgs>
-                        <arg>-Xplugin:Manifold no-bootstrap</arg>
-                    </compilerArgs>
+                    <!-- while working with manifold -->
+<!--                    <compilerArgs>-->
+<!--                        <arg>-Xplugin:Manifold no-bootstrap</arg>-->
+<!--                    </compilerArgs>-->
                     <annotationProcessorPaths>
-                        <path>
-                            <groupId>systems.manifold</groupId>
-                            <artifactId>manifold-ext</artifactId>
-                            <version>${manifold.version}</version>
-                        </path>
-                        <!-- while working with lombok -->
+                        <!-- while working with manifold -->
 <!--                        <path>-->
-<!--                            <groupId>org.projectlombok</groupId>-->
-<!--                            <artifactId>lombok</artifactId>-->
-<!--                            <version>${lombok.version}</version>-->
+<!--                            <groupId>systems.manifold</groupId>-->
+<!--                            <artifactId>manifold-ext</artifactId>-->
+<!--                            <version>${manifold.version}</version>-->
 <!--                        </path>-->
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version>
+                        </path>
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
